--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="poster">
-    <img class="motivation" src="./assets/images/daenerys.jpeg" alt="daenerys">
+    <img class="motivation-img" src="./assets/images/daenerys.jpeg" alt="daenerys">
     <h1>That special moment</h1>
     <p>When you find the perfect avocado at the supermarket</p>
   </div>
