--- a/11.3 TinDog Project/solution.html
+++ b/11.3 TinDog Project/solution.html
@@ -19,8 +19,7 @@
     <div class="container col-xxl-8 px-4 pt-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="200"
-            loading="lazy">
+          <img src="./images/iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="200" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet new and interesting dogs nearby.</h1>
@@ -131,6 +130,7 @@
       </div>
     </div>
   </section>
+
   <!-- Pricing -->
   <section id="pricing">
     <div class="container">
@@ -138,6 +138,7 @@
         <h2 class="display-4 fw-normal">A Plan for Every Dog's Needs</h2>
         <p class="fs-5 text-body-secondary">Simple and affordable price plans for you and your dog.
       </div>
+      
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
