--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -41,7 +41,7 @@
   </section>
   <!-- Features -->
   <section id="features">
-    <div class="container mt-5" id="hanging-icons">
+    <div class="container mt-5">
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="col d-flex align-items-start">
           <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
@@ -94,10 +94,10 @@
     <div class="my-5">
       <div class="p-5 text-center bg-body-tertiary">
         <div class="container py-5">
-          <h2 class="col-lg-8 mx-auto lead"> "I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."
+          <h2 class="text-body-emphasis"> "I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."
           </h2>
           <img class="profile-img mt-5" src="./images/dog-img.jpg">
-          <p class="col-lg-8 mx-auto lead"> Pebbles, New York
+          <p class="col-lg-8 mx-auto lead mt-2"> Pebbles, New York
           </p>
         </div>
         <div class="container">
@@ -140,7 +140,7 @@
                 <li>10 Messages Per Day</li>
                 <li>Unlimited App Usage</li>
               </ul>
-              <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+              <button type="button" class="w-100 btn btn-lg btn-outline-dark">Sign up for free</button>
             </div>
           </div>
         </div>
@@ -156,13 +156,13 @@
                 <li>Unlimited Messages</li>
                 <li>Unlimited App Usage</li>
               </ul>
-              <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+              <button type="button" class="w-100 btn btn-lg btn-dark">Get started</button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm border-primary">
-            <div class="card-header py-3 text-bg-primary border-primary">
+          <div class="card mb-4 rounded-3 shadow-sm border-dark">
+            <div class="card-header py-3 text-bg-dark border-dark">
               <h4 class="my-0 fw-normal">Mastiff</h4>
             </div>
             <div class="card-body">
@@ -172,7 +172,7 @@
                 <li>Unlimited Matches & Messages</li>
                 <li>Unlimited App Usage</li>
               </ul>
-              <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+              <button type="button" class="w-100 btn btn-lg btn-dark">Contact us</button>
             </div>
           </div>
         </div>
